Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h3>
 <a id="para-qué-empresas-u-organizaciones-sirve" class="anchor" href="#para-qu%C3%A9-empresas-u-organizaciones-sirve" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>¿Para qué empresas u organizaciones sirve?.</h3>
 
-<p>El sistema de reserva de horas, sirve para cualquier tipo de empresa o institución que desee gestionar horas (ya sea para médicos, profesionales, inmuebles, etc...) y tener un control, con alertas vía e-email o por la misma plataforma</p>
+<p>El sistema de reserva de horas, sirve para cualquier tipo de empresa o institución que desee gestionar horas (ya sea para médicos, profesionales, inmuebles, etc...) y tener un control, con alertas vía e-mail o por la misma plataforma</p>
 
 <h3>
 <a id="plataforma-saas" class="anchor" href="#plataforma-saas" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Plataforma Saas</h3>
@@ -46,7 +46,7 @@
 <h3>
 <a id="autores-y-contribuidores" class="anchor" href="#autores-y-contribuidores" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Autores y contribuidores</h3>
 
-<p>Yo Luis Aguilera C. <a href="https://github.com/luisaguilerac" class="user-mention">@luisaguilerac</a> junto con la organización <a href="https://github.com/appsourcecl" class="user-mention">@appsourcecl</a> somos responsables de la creación de esta plataforma, sienda mantenida y actualizada.</p>
+<p>Luis Aguilera C. <a href="https://github.com/luisaguilerac" class="user-mention">@luisaguilerac</a> junto con la organización <a href="https://github.com/appsourcecl" class="user-mention">@appsourcecl</a> somos responsables de la creación de esta plataforma, siendo mantenida y actualizada.</p>
 
 <h3>
 <a id="información-de-contacto" class="anchor" href="#informaci%C3%B3n-de-contacto" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Información de contacto</h3>
