Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
 <p>Si, Es un proyecto libre y por todas partes es gratis, la razón de esta decisión es para contribuir a un mundo con mejores sistemas informáticos.</p>
 
 <h3>
+<a id="tecnologías-involucradas" class="anchor" href="#tecnolog%C3%ADas-involucradas" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tecnologías involucradas</h3>
+
+<p>El desarrollo está basado en PHP y MySQl utilizando el framework Laravel 5.2.</p>
+
+<h3>
+<a id="licencia" class="anchor" href="#licencia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Licencia</h3>
+
+<p>Licencia MIT</p>
+
+<h3>
 <a id="autores-y-contribuidores" class="anchor" href="#autores-y-contribuidores" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Autores y contribuidores</h3>
 
 <p>Luis Aguilera C. <a href="https://github.com/luisaguilerac" class="user-mention">@luisaguilerac</a> junto con la organización <a href="https://github.com/appsourcecl" class="user-mention">@appsourcecl</a> somos responsables de la creación de esta plataforma, siendo mantenida y actualizada.</p>
