Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Dinam</h1>
-      <h2 class="project-tagline">Sistema de reserva de horas</h2>
+      <h2 class="project-tagline">Sistema de reserva de horas (sistema no terminado 65% de avance)</h2>
       <a href="https://github.com/appsourcecl/Dinam" class="btn">View on GitHub</a>
       <a href="https://github.com/appsourcecl/Dinam/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/appsourcecl/Dinam/tarball/master" class="btn">Download .tar.gz</a>
@@ -22,7 +22,7 @@
       <h3>
 <a id="para-qué-empresas-u-organizaciones-sirve" class="anchor" href="#para-qu%C3%A9-empresas-u-organizaciones-sirve" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>¿Para qué empresas u organizaciones sirve?.</h3>
 
-<p>El sistema de reserva de horas, sirve para cualquier tipo de empresa o institución que desee gestionar horas (ya sea para médicos, profesionales, inmuebles, etc...) y tener un control, con alertas vía e-mail o por la misma plataforma</p>
+<p>El sistema de reserva de horas, sirve para cualquier tipo de empresa o institución que desee gestionar horas (ya sea para médicos, profesionales, inmuebles, etc...) y tener un control con alertas vía e-mail o por la misma plataforma</p>
 
 <h3>
 <a id="plataforma-saas" class="anchor" href="#plataforma-saas" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Plataforma Saas</h3>
