Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
 <p>Escríbanos a <a href="mailto:contacto@appsource.cl">contacto@appsource.cl</a> o <a href="mailto:laguiera@appsource.cl">laguiera@appsource.cl</a> para cualquier duda o consulta</p>
 
+<p><img src="http://appsource.cl/images/logo.png" alt="Appsource"></p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/appsourcecl/Dinam">Dinam</a> is maintained by <a href="https://github.com/appsourcecl">appsourcecl</a>.</span>
 
