Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Dinam</h1>
-      <h2 class="project-tagline">Sistema de reserva de horas (sistema no terminado 65% de avance)</h2>
+      <h2 class="project-tagline">Software de gestión para centros médicos v1.0</h2>
       <a href="https://github.com/appsourcecl/Dinam" class="btn">View on GitHub</a>
       <a href="https://github.com/appsourcecl/Dinam/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/appsourcecl/Dinam/tarball/master" class="btn">Download .tar.gz</a>
